# infographic-builder

./: .gitignore  README.md  bundle.md  pyproject.toml
agents/: diagram-beautifier.md  infographic-builder.md  infographic-designer.md
behaviors/: infographic.yaml
context/: diagram-beautifier-awareness.md  infographic-awareness.md
diagram_beautifier/: __init__.py  decompose.py  deps.py  parser.py  prompt.py  renderer.py  review.py
docs/: BACKLOG.md  architecture.dot  diagram-style-guide.md  evaluation.dot  show-and-tell-april-2026.html  style-guide.md
eval/: EVAL_PHILOSOPHY.md  __init__.py  __main__.py  cli.py  report.py  rubric.py  scenarios-smoke.yaml  scenarios.yaml
modules/tool-stitch-panels/: pyproject.toml
modules/tool-stitch-panels/amplifier_module_tool_stitch_panels/: __init__.py
recipes/: evaluate-diagrams.yaml  evaluate.yaml  generate-missing-6.yaml  generate-multi-panel.yaml  generate-sample-gallery-3.1-flash.yaml  generate-sample-gallery.yaml  style-audition.yaml
tests/: helpers.py  test_agent_plan_and_quality_steps.py  test_cli.py  test_dealbreaker_check.py  test_diagram_beautifier_agent.py  test_diagram_decompose.py  test_diagram_deps.py  test_diagram_parser.py  test_diagram_prompt.py  test_diagram_renderer.py  test_diagram_review.py  test_diagram_routing.py  test_diagram_style_guide.py  test_diagram_wiring.py  test_eval_package.py  test_evaluate_recipe.py  test_extended_library.py  test_gitignore_eval_results.py  test_infographic_builder.py  test_multi_candidate.py  test_pyproject_config.py  test_quality_review_dimensions.py  test_report.py  (+7 more)
(+37 files in other folders)
