[project]
name = "infographic-eval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
